# ai-gateway

ai-gateway/: .gitignore  Makefile  gateway.yaml  go.mod
ai-gateway/cmd/: main.go
ai-gateway/internal/config/: config.go
ai-gateway/internal/gateway/: gateway.go
ai-gateway/internal/provider/: anthropic.go  ollama.go  openai.go  provider.go
ai-gateway/internal/server/: server.go
heimdall/: .gitignore  [WIP] HEIMDALL PRFAQ.docx  demo-reset.sh  docker-compose.yml
heimdall/backend/: .env.example  Cargo.toml  Dockerfile
heimdall/backend/crates/api/: Cargo.toml
heimdall/backend/crates/api/src/: main.rs  state.rs
heimdall/backend/crates/api/src/routes/: audit.rs  catalog.rs  changes.rs  dashboard.rs  mod.rs  policies.rs
heimdall/backend/crates/core/: Cargo.toml
heimdall/backend/crates/core/src/: ai.rs  error.rs  lib.rs  models.rs  policy.rs
heimdall/backend/crates/db/: Cargo.toml
heimdall/backend/crates/db/migrations/: 001_initial.sql
heimdall/backend/crates/db/src/: main.rs  seed.rs
heimdall/backend/crates/worker/: Cargo.toml
heimdall/backend/crates/worker/src/: crawler.rs  demo_events.rs  main.rs  pii_scanner.rs
heimdall/docs/: DEMO_SCRIPT.md
heimdall/docs/diagrams/: 01-system-context.md  02-component.md  03-data-flow.md  04-change-detection-flow.md  05-policy-evaluation-flow.md  06-sequence-day-zero.md  07-sequence-breaking-change.md  08-erd.md  09-state-machine.md  10-deployment.md  README.md
heimdall/frontend/: package-lock.json  package.json  tailwind.config.ts
heimdall/frontend/src/app/: globals.css  layout.tsx  page.tsx
heimdall/frontend/src/app/audit/: page.tsx
heimdall/frontend/src/app/catalog/: page.tsx
heimdall/frontend/src/app/changes/: page.tsx
heimdall/frontend/src/app/policies/: page.tsx
heimdall/frontend/src/components/layout/: Sidebar.tsx
heimdall/frontend/src/components/ui/: Badge.tsx  Card.tsx  StatCard.tsx
heimdall/frontend/src/lib/: api.ts  utils.ts
heimdall/frontend/src/types/: index.ts
weekly-report/: .env.example  .gitignore  Makefile  README.md  config.yaml  go.mod  go.sum  prompts.yaml
weekly-report/cmd/: main.go
weekly-report/internal/charts/: charts.go
weekly-report/internal/config/: config.go
weekly-report/internal/github/: client.go  summary.go
weekly-report/internal/llm/: provider.go
weekly-report/internal/llm/gateway/: gateway.go
weekly-report/internal/report/: generator.go  prompts.go
