[package]
name = "heimdall-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio      = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sqlx       = { workspace = true }
reqwest    = { workspace = true }
uuid       = { workspace = true }
chrono     = { workspace = true }
anyhow     = { workspace = true }
thiserror  = { workspace = true }
tracing    = { workspace = true }
