[package]
name = "heimdall-db"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "seed"
path = "src/main.rs"

[dependencies]
tracing-subscriber = { workspace = true }
dotenvy            = { workspace = true }
tokio              = { workspace = true }
heimdall-core = { path = "../core" }
sqlx          = { workspace = true }
uuid          = { workspace = true }
chrono        = { workspace = true }
anyhow        = { workspace = true }
tracing       = { workspace = true }
serde_json    = { workspace = true }
