[package]
name = "heimdall-worker"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "heimdall-worker"
path = "src/main.rs"

[dependencies]
heimdall-core   = { path = "../core" }
heimdall-db     = { path = "../db" }
tokio           = { workspace = true }
futures         = { workspace = true }
sqlx            = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
uuid            = { workspace = true }
chrono          = { workspace = true }
anyhow          = { workspace = true }
tracing         = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy         = { workspace = true }
reqwest         = { workspace = true }
